# dev-tools

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .rumdl.toml  .shuck.toml  .versions.yaml  CONTRIBUTING.md  README.md  pyproject.toml  release.sh  renovate.json
.devcontainer/: devcontainer.json  requirements.txt
.github/workflows/: check.yaml  codeql.yml  publish-configure-vscode-for-bazel.yml  publish-pre-commit-excludes.yml  publish-whoowns.yml  publish_package.yml  publish_packages.yml  release.yml
dev_tools/: __init__.py  check_forbidden_tags.py  check_jira_reference_in_todo.py  check_load_statement.py  check_max_one_sentence_per_line.py  check_number_of_lines_count.py  check_ownership.py  check_rule_has_tag.py  check_shellscript_set_options.py  check_useless_exclude_paths_hooks.py  configure_vscode_for_bazel.py  find_owner.py  generate_hook_docs.py  git_hook_utils.py  ownership_utils.py  pre_commit_utils.py  print_pre_commit_metrics.py  sync_tool_versions.py  sync_vscode_config.py
dev_tools/utils/: build_file_parsing_utils.py  git_hook_utils.py  pre_commit_utils.py
scripts/: check_release.sh
tests/: __init__.py  test_build_file_parsing_util.py  test_check_build_file_extensions.py  test_check_cpp_tests_pattern.py  test_check_forbidden_tags.py  test_check_load_statement.py  test_check_max_one_sentence_per_line.py  test_check_ownership.py  test_check_readme_md_consistency.py  test_check_rule_has_tag.py  test_check_rules_python_usage.py  test_check_shellscript_set_options.py  test_check_useless_exclude_paths_hooks.py  test_configure_vscode_for_bazel.py  test_find_owner.py  test_generate_hook_docs.py  test_ownership_utils.py  test_print_pre_commit_metrics.py  test_sync_tool_versions.py  test_sync_vscode_config.py
tests/configure_vscode_for_bazel/: __init__.py  test_configure_vscode_for_bazel.py
tests/pre_commit_excludes/: __init__.py  test_hook_utils.py  test_remove_unnecessary_excludes.py
tests/utils/: test_build_file_parsing_utils.py
tests/whoowns/: __init__.py  test_find_owner.py  test_ownership_utils.py
