[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "dev-tools"
version = "1.2.0" # Will be read by the release pipeline
description = ""
readme = "README.md"
authors = [
  {name = "BRE", email = "bre@luminartech.com"}
]
requires-python = ">=3.10"
dependencies = [
  "pre-commit>=4.2.0",
  "pyjson5>=1.6.8",
  "ruamel-yaml==0.19.1"
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  "pyfakefs==6.1.1",
  "ruamel-yaml==0.19.1"
]

[project.scripts]
check-jira-reference-in-todo = "dev_tools.check_jira_reference_in_todo:main"
check-load-statement = "dev_tools.check_load_statement:main"
check-max-one-sentence-per-line = "dev_tools.check_max_one_sentence_per_line:main"
check-number-of-lines-count = "dev_tools.check_number_of_lines_count:main"
check-ownership = "dev_tools.check_ownership:main"
check-shellscript-set-options = "dev_tools.check_shellscript_set_options:main"
check-useless-exclude-paths-hooks = "dev_tools.check_useless_exclude_paths_hooks:main"
configure-vscode-for-bazel = "dev_tools.configure_vscode_for_bazel:main"
generate-hook-docs = "dev_tools.generate_hook_docs:main"
print-pre-commit-metrics = "dev_tools.print_pre_commit_metrics:main"
sync-vscode-config = "dev_tools.sync_vscode_config:main"
sync-tool-versions = "dev_tools.sync_tool_versions:main"
whoowns = "dev_tools.find_owner:main"

[tool.docformatter]
in-place = true
recursive = true
wrap-summaries = 88
wrap-descriptions = 81

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov=dev_tools -vv"
testpaths = [
  "tests"
]

[tool.ruff]
fix = true
unsafe-fixes = true
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "A00",
  "ANN001",
  "COM812",
  "D",
  "E501", # Line length is the task of the formatter
  "FA100",
  "ISC001", # Conflicts with formatter
  "LOG015",
  "S101",
  "S603",
  "T201"
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "PLR2004" # Magic values in tests are ok since they are often the expected values
]

[tool.vulture]
min_confidence = 100
ignore_decorators = ["@pytest.fixture"]
exclude = [
  "*test_*.py" # vulture doesn't understand pytest fixtures
]
